--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    /*카카오 로그인 모듈*/
+    implementation 'com.kakao.sdk:v2-user:2.19.0'
+
+
+
 //    implementation 'com.android.support:design:34.0.0'
 }
