--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,14 @@ plugins {
     id 'com.android.library' version '8.1.4' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
+
+
+allprojects {
+    repositories {
+            maven {
+                url 'https://devrepo.kakao.com/nexus/content/groups/public/'
+            }
+        google()
+        mavenCentral()
+    }
+}
