--- a/settings.gradle
+++ b/settings.gradle
@@ -5,12 +5,16 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+/*
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+            maven {
+                url 'https://devrepo.kakao.com/nexus/content/groups/public/'
+            }
         google()
         mavenCentral()
     }
-}
+}*/
 rootProject.name = "snowman"
 include ':app'
