--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,12 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true" >
+
+        </activity>
+
+        <activity
+            android:name=".ui.LoginActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
